fix: update border color for dark mode in layout

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -63,7 +63,7 @@ hr {
 	border: 0;
 	border-bottom: 1px solid colors.color(gray, 100);
 	@media (prefers-color-scheme: dark) {
-		border-color: colors.color(gray, 900);
+		border-color: colors.color(gray, 400);
 	}
 }
 
